frontend: Fix scrollbar wobble (#47)

--- a/desktop/workspaces/angular-app/src/styles.scss
+++ b/desktop/workspaces/angular-app/src/styles.scss
@@ -1,19 +1,15 @@
 * {
-	scrollbar-width: none;
-	-ms-overflow-style: none;
+	overflow-y: auto;
+	scrollbar-width: thin; /* Firefox */
+	-ms-overflow-style: scrollbar; /* Internet Explorer and Edge */
 }
 
 *::-webkit-scrollbar {
-	display: none;
-}
-
-*:hover {
-	scrollbar-width: thin;
-	-ms-overflow-style: auto;
+	display: none; /* Safari and Chrome */
 }
 
 *::-webkit-scrollbar {
-	width: 4px;
+	width: 4px; /* Safari and Chrome */
 }
 
 *::-webkit-scrollbar-track {
@@ -23,7 +19,7 @@
 *::-webkit-scrollbar-thumb {
 	background-color: rgb(240, 240, 240);
 	border-radius: 10px;
-	border: 2px solid transparent;
+	border: 2px solid transparent; /* Optional: space around the thumb */
 }
 
 *::-webkit-scrollbar-thumb:hover {
